# maplab_tools

./: .gitignore  .gitmodules  readme.md
artifact_republisher/: CMakeLists.txt  package.xml
artifact_republisher/app/: artifact-republisher-app.cc
artifact_republisher/include/artifact_republisher/: artifact-republisher.h
artifact_republisher/share/: run_artifact_republisher
artifact_republisher/src/: artifact-republisher.cc
image_debayer/: CMakeLists.txt  package.xml
image_debayer/app/: image-debayer-node.cc
image_debayer/include/image_debayer/: image-reconstruction.h
image_debayer/script/: white_balance_test.ipynb
image_debayer/script/.ipynb_checkpoints/: white_balance_test-checkpoint.ipynb
image_debayer/share/: run_image_debayer
image_debayer/src/: image-reconstruction.cc
lidar_image_projection/: CMakeLists.txt  package.xml
lidar_image_projection/app/: lidar-image-projection-app.cc
lidar_image_projection/include/lidar-image-projection/: lidar-image-projection-node.h  message-sync.h  rotation-utils.h  transformation-utils.h
lidar_image_projection/share/: lidar-image-projection-anymal  lidar-image-projection-lidarmace
lidar_image_projection/src/: lidar-image-projection-node.cc  rotation-utils.cc  transformation-utils.cc
maplab_camera_info_publisher/: CMakeLists.txt  package.xml
maplab_camera_info_publisher/app/: maplab-camera-info-publisher-app.cc
maplab_camera_info_publisher/include/maplab-camera-info-publisher/: helpers.h  maplab-camera-info-publisher-node.h
maplab_camera_info_publisher/share/: camera_info_publisher_alpha  camera_info_publisher_anymal  camera_info_publisher_anymal_vlens  camera_info_publisher_armadillo  camera_info_publisher_badger_FR  camera_info_publisher_penguin  record_test_bag_penguin
maplab_camera_info_publisher/src/: helpers.cc  maplab-camera-info-publisher-node.cc
maplab_dependencies/internal/segmap_private/: dependencies.rosinstall
maplab_private/: CMakeLists.txt  dependencies.rosinstall
maplab_private/algorithms/online_map_builders/: CMakeLists.txt
maplab_private/applications/maplab_node/: CMakeLists.txt  package.xml
maplab_private/applications/maplab_node/app/: maplab-ros-node-app.cc
maplab_private/applications/maplab_node/include/maplab-node/: data-publisher-flow.h  datasource-factory.h  datasource-flow.h  datasource-rosbag.h  datasource-rostopic.h  datasource.h  feature-tracking-flow.h  flow-topics.h  localization-handler.h  map-builder-flow.h  maplab-node.h  maplab-ros-node.h  ros-helpers.h  synchronizer-flow.h  synchronizer.h
maplab_private/applications/maplab_node/launch/: maplab_node.launch  maplab_node_bagged_euroc.launch  maplab_node_offline.launch  maplab_node_okvis.launch  maplab_node_okvis_armadillo.launch  maplab_node_rovioli.launch  maplab_node_rovioli_arl.launch  maplab_node_rovioli_penguin.launch
maplab_private/applications/maplab_node/share/: maplab.rviz
maplab_private/applications/maplab_node/share/example_calibrations/: armadillo-okvis.yaml  armadillo.yaml  lidarstick-150-deg-cams-okvis.yaml  mav-arl-high-res-sensors.yaml  mav-arl-sensors.yaml  mav-penguin-sensors.yaml
maplab_private/applications/maplab_node/src/: data-publisher-flow.cc  datasource-factory.cc  datasource-rosbag.cc  datasource-rostopic.cc  feature-tracking.cc  localization-handler.cc  map-builder-flow.cc  map-update-builder.cc  maplab-node.cc  maplab-ros-node.cc  ros-helpers.cc  synchronizer.cc  visual-localizer.cc
maplab_private/applications/maplab_node/test/: test-feature-tracking.cc  test-localizer.cc  test-map-update-builder.cc
maplab_private/map-structure/vi-map/src/: vertex.cc  (+8 more)
maplab_private/maplab/: package.xml
maplab_private/visualization/: package.xml
maplab_profiles/: CMakeLists.txt  package.xml
maplab_profiles/config/: commander_config.yaml  debug_grid_search.yaml  default.yaml  grid_search.yaml  high_performance.yaml  lidar-only.yaml  low_performance.yaml  profiler_config.yaml  profiler_config_local.yaml  profiler_config_mapcompute.yaml
maplab_profiles/launch/: commander.launch  default.launch  profiler.launch
maplab_service_interface/: CMakeLists.txt  package.xml
maplab_service_interface/app/: maplab-service-interface-node-app.cc
maplab_service_interface/include/maplab-service-interface/: maplab-service-interface-node.h  service-handler.h  service-type.h
maplab_service_interface/share/: keyframe_maplab.sh  optimize_maplab.sh  run_maplab_service_interface  start_maplab.sh  start_rviz.sh  start_vnc.sh
maplab_service_interface/share/sync_maps/: sync_anymal_1.sh  sync_anymal_1_pw.sh  sync_armadillo.sh  sync_berlukas.sh
maplab_service_interface/src/: maplab-service-interface-node.cc  service-handler.cc
maplab_service_interface/srv/: maplab_service.srv
path_saver/: CMakeLists.txt  package.xml
path_saver/config/: compslam.yaml  gt.yaml
path_saver/launch/: saver.launch  saver_gt.launch
ply_publisher/: CMakeLists.txt  package.xml
ply_publisher/app/: ply-publisher-app.cc
ply_publisher/include/ply-publisher/: ply-publisher-node.h
ply_publisher/share/: run_ply_publisher
ply_publisher/src/: ply-publisher-node.cc
raw_to_color_image/: CMakeLists.txt  package.xml
raw_to_color_image/app/: raw-to-color-node.cc
raw_to_color_image/include/raw_to_color/: r2c-manager.h  ros-utils.h
raw_to_color_image/launch/: artifact_manager.launch  gui.launch
raw_to_color_image/share/: run_r2c
raw_to_color_image/src/: r2c-manager.cc  ros-utils.cc
semantic_cloud_publisher/: CMakeLists.txt  package.xml  setup.py
semantic_cloud_publisher/scripts/: laserscan.py  publisher.py
voxgraph_submap_converter/: CMakeLists.txt  package.xml
voxgraph_submap_converter/app/: voxgraph-converter-app.cc  voxgraph-converter-node.cc
voxgraph_submap_converter/include/voxgraph-converter/: voxgraph-converter-node.h
voxgraph_submap_converter/share/: run_voxgraph_converter  run_voxgraph_converter_with_ply_export
voxgraph_submap_converter/src/: voxgraph-converter-node.cc
white_balancer/: CMakeLists.txt  package.xml
white_balancer/config/: config.yaml
white_balancer/launch/: wb_node.launch
(+144 files in other folders)
