<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
	<name>lidar_image_projection</name>
	<version>2.2.0</version>
	<description>
    Reads a given sensor yaml and projects the lidar in the image
	</description>
	<maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
	<license>Apache 2.0</license>

	<buildtool_depend>catkin_simple</buildtool_depend>
	<buildtool_depend>catkin</buildtool_depend>

	<depend>gflags_catkin</depend>
	<depend>glog_catkin</depend>
  <depend>maplab_ros_common</depend>
  <depend>vi_map</depend>
  <depend>vio_common</depend>
  <depend>aslam_cv_cameras</depend>
  <depend>opencv3_catkin</depend>
  <depend>eigen_catkin</depend>

</package>
