<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
	<name>maplab_camera_info_publisher</name>
	<version>2.2.0</version>
	<description>
    Reads a given sensor yaml and publishes the camera info for a specified sensor
	</description>
	<maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
	<license>Apache 2.0</license>

	<buildtool_depend>catkin_simple</buildtool_depend>
	<buildtool_depend>catkin</buildtool_depend>

	<depend>gflags_catkin</depend>
	<depend>glog_catkin</depend>
  <depend>maplab_ros_common</depend>
  <depend>vi_map</depend>
  <depend>vio_common</depend>
  <depend>aslam_cv_cameras</depend>


</package>
