<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
	<name>maplab_service_interface</name>
	<version>2.2.0</version>
	<description>
    Provides a ROS service interface to call the pipeline remotely. 
	</description>
	<maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
	<license>Apache 2.0</license>

	<buildtool_depend>catkin_simple</buildtool_depend>
	<buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

	<depend>cv_bridge</depend>
	<depend>gflags_catkin</depend>
	<depend>glog_catkin</depend>
  <depend>maplab_ros_common</depend>
</package>
