<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>ply_publisher</name>
  <version>2.2.0</version>
  <description>
    Converts voxgraph submaps to pointcloud2 messages. 
  </description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>maplab_ros_common</depend>
  <depend>resources_common</depend>
  <depend>voxgraph_msgs</depend>
  <depend>map_resources</depend>
  <depend>visualization</depend>
</package>
