<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
	<name>raw_to_color_image</name>
	<version>1.0.0</version>
	<description>
    Performs a debayering and white balance on raw images.
	</description>
	<maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
	<license>Apache 2.0</license>

	<buildtool_depend>catkin_simple</buildtool_depend>
	<buildtool_depend>catkin</buildtool_depend>

	<depend>cv_bridge</depend>
	<depend>gflags_catkin</depend>
	<depend>glog_catkin</depend>
	<depend>image_transport</depend>
	<depend>opencv3_catkin</depend>
</package>
