<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>semantic_cloud_publisher</name>
  <version>2.2.0</version>
  <description>
    Semantic point cloud publisher
  </description>
  <maintainer email="maplab-dev@mavt.ethz.ch">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>maplab_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
</package>
